punto_1_&&_2/generado/LenguajeNoRelacionalParser.py
# Generated from /home/antonio/Downloads/PARCIAL_LP/punto_1_&&_2/gramatica/LenguajeNoRelacional.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LenguajeNoRelacionalParser ( Parser ):

    grammarFileName = "LenguajeNoRelacional.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'CREAR'", "'COLECCION'", "'INSERTAR'", 
                     "'EN'", "'BUSCAR'", "'ACTUALIZAR'", "'FIJAR'", "'ELIMINAR'", 
                     "'DE'", "'MOSTRAR'", "'COLECCIONES'", "'DONDE'", "'O'", 
                     "'Y'", "<INVALID>", "'nulo'", "'=='", "'!='", "'<='", 
                     "'>='", "'<'", "'>'", "'='", "':'", "','", "';'", "'('", 
                     "')'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "CREAR", "COLECCION", "INSERTAR", "EN", 
                      "BUSCAR", "ACTUALIZAR", "FIJAR", "ELIMINAR", "DE", 
                      "MOSTRAR", "COLECCIONES", "DONDE", "O", "Y", "BOOLEANO", 
                      "NULO", "IGUAL_IGUAL", "DIFERENTE", "MENOR_IGUAL", 
                      "MAYOR_IGUAL", "MENOR", "MAYOR", "IGUAL", "DOS_PUNTOS", 
                      "COMA", "PUNTO_Y_COMA", "PARENTESIS_ABRE", "PARENTESIS_CIERRA", 
                      "LLAVE_ABRE", "LLAVE_CIERRA", "IDENTIFICADOR", "NUMERO", 
                      "CADENA", "COMENTARIO_LINEA", "COMENTARIO_BLOQUE", 
                      "ESPACIO" ]

    RULE_programa = 0
    RULE_instruccion = 1
    RULE_crearColeccion = 2
    RULE_insertar = 3
    RULE_buscar = 4
    RULE_actualizar = 5
    RULE_eliminar = 6
    RULE_condicionDonde = 7
    RULE_listaAsignaciones = 8
    RULE_asignacion = 9
    RULE_objeto = 10
    RULE_par = 11
    RULE_expresion = 12
    RULE_expresionO = 13
    RULE_expresionY = 14
    RULE_expresionIgualdad = 15
    RULE_expresionRelacional = 16
    RULE_primario = 17
    RULE_literal = 18

    ruleNames =  [ "programa", "instruccion", "crearColeccion", "insertar", 
                   "buscar", "actualizar", "eliminar", "condicionDonde", 
                   "listaAsignaciones", "asignacion", "objeto", "par", "expresion", 
                   "expresionO", "expresionY", "expresionIgualdad", "expresionRelacional", 
                   "primario", "literal" ]

    EOF = Token.EOF
    CREAR=1
    COLECCION=2
    INSERTAR=3
    EN=4
    BUSCAR=5
    ACTUALIZAR=6
    FIJAR=7
    ELIMINAR=8
    DE=9
    MOSTRAR=10
    COLECCIONES=11
    DONDE=12
    O=13
    Y=14
    BOOLEANO=15
    NULO=16
    IGUAL_IGUAL=17
    DIFERENTE=18
    MENOR_IGUAL=19
    MAYOR_IGUAL=20
    MENOR=21
    MAYOR=22
    IGUAL=23
    DOS_PUNTOS=24
    COMA=25
    PUNTO_Y_COMA=26
    PARENTESIS_ABRE=27
    PARENTESIS_CIERRA=28
    LLAVE_ABRE=29
    LLAVE_CIERRA=30
    IDENTIFICADOR=31
    NUMERO=32
    CADENA=33
    COMENTARIO_LINEA=34
    COMENTARIO_BLOQUE=35
    ESPACIO=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LenguajeNoRelacionalParser.EOF, 0)

        def instruccion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LenguajeNoRelacionalParser.InstruccionContext)
            else:
                return self.getTypedRuleContext(LenguajeNoRelacionalParser.InstruccionContext,i)


        def getRuleIndex(self):
            return LenguajeNoRelacionalParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = LenguajeNoRelacionalParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 362) != 0):
                self.state = 38
                self.instruccion()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.match(LenguajeNoRelacionalParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def crearColeccion(self):
            return self.getTypedRuleContext(LenguajeNoRelacionalParser.CrearColeccionContext,0)


        def PUNTO_Y_COMA(self):
            return self.getToken(LenguajeNoRelacionalParser.PUNTO_Y_COMA, 0)

        def insertar(self):
            return self.getTypedRuleContext(LenguajeNoRelacionalParser.InsertarContext,0)


        def buscar(self):
            return self.getTypedRuleContext(LenguajeNoRelacionalParser.BuscarContext,0)


        def actualizar(self):
            return self.getTypedRuleContext(LenguajeNoRelacionalParser.ActualizarContext,0)


        def eliminar(self):
            return self.getTypedRuleContext(LenguajeNoRelacionalParser.EliminarContext,0)


        def getRuleIndex(self):
            return LenguajeNoRelacionalParser.RULE_instruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccion" ):
                listener.enterInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccion" ):
                listener.exitInstruccion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccion" ):
                return visitor.visitInstruccion(self)
            else:
                return visitor.visitChildren(self)




    def instruccion(self):

        localctx = LenguajeNoRelacionalParser.InstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_instruccion)
        self._la = 0 # Token type
        try:
            self.state = 66
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.crearColeccion()
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==26:
                    self.state = 47
                    self.match(LenguajeNoRelacionalParser.PUNTO_Y_COMA)


                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 50
                self.insertar()
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==26:
                    self.state = 51
                    self.match(LenguajeNoRelacionalParser.PUNTO_Y_COMA)


                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.buscar()
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==26:
                    self.state = 55
                    self.match(LenguajeNoRelacionalParser.PUNTO_Y_COMA)


                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 4)
                self.state = 58
                self.actualizar()
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==26:
                    self.state = 59
                    self.match(LenguajeNoRelacionalParser.PUNTO_Y_COMA)


                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 5)
                self.state = 62
                self.eliminar()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==26:
                    self.state = 63
                    self.match(LenguajeNoRelacionalParser.PUNTO_Y_COMA)


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CrearColeccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREAR(self):
            return self.getToken(LenguajeNoRelacionalParser.CREAR, 0)

        def COLECCION(self):
            return self.getToken(LenguajeNoRelacionalParser.COLECCION, 0)

        def IDENTIFICADOR(self):
            return self.getToken(LenguajeNoRelacionalParser.IDENTIFICADOR, 0)

        def getRuleIndex(self):
            return LenguajeNoRelacionalParser.RULE_crearColeccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCrearColeccion" ):
                listener.enterCrearColeccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCrearColeccion" ):
                listener.exitCrearColeccion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCrearColeccion" ):
                return visitor.visitCrearColeccion(self)
            else:
                return visitor.visitChildren(self)




    def crearColeccion(self):

        localctx = LenguajeNoRelacionalParser.CrearColeccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_crearColeccion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(LenguajeNoRelacionalParser.CREAR)
            self.state = 69
            self.match(LenguajeNoRelacionalParser.COLECCION)
            self.state = 70
            self.match(LenguajeNoRelacionalParser.IDENTIFICADOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InsertarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INSERTAR(self):
            return self.getToken(LenguajeNoRelacionalParser.INSERTAR, 0)

        def EN(self):
            return self.getToken(LenguajeNoRelacionalParser.EN, 0)

        def IDENTIFICADOR(self):
            return self.getToken(LenguajeNoRelacionalParser.IDENTIFICADOR, 0)

        def objeto(self):
            return self.getTypedRuleContext(LenguajeNoRelacionalParser.ObjetoContext,0)


        def getRuleIndex(self):
            return LenguajeNoRelacionalParser.RULE_insertar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsertar" ):
                listener.enterInsertar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsertar" ):
                listener.exitInsertar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInsertar" ):
                return visitor.visitInsertar(self)
            else:
                return visitor.visitChildren(self)




    def insertar(self):

        localctx = LenguajeNoRelacionalParser.InsertarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_insertar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(LenguajeNoRelacionalParser.INSERTAR)
            self.state = 73
            self.match(LenguajeNoRelacionalParser.EN)
            self.state = 74
            self.match(LenguajeNoRelacionalParser.IDENTIFICADOR)
            self.state = 75
            self.objeto()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BuscarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BUSCAR(self):
            return self.getToken(LenguajeNoRelacionalParser.BUSCAR, 0)

        def IDENTIFICADOR(self):
            return self.getToken(LenguajeNoRelacionalParser.IDENTIFICADOR, 0)

        def condicionDonde(self):
            return self.getTypedRuleContext(LenguajeNoRelacionalParser.CondicionDondeContext,0)


        def getRuleIndex(self):
            return LenguajeNoRelacionalParser.RULE_buscar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBuscar" ):
                listener.enterBuscar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBuscar" ):
                listener.exitBuscar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBuscar" ):
                return visitor.visitBuscar(self)
            else:
                return visitor.visitChildren(self)




    def buscar(self):

        localctx = LenguajeNoRelacionalParser.BuscarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_buscar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(LenguajeNoRelacionalParser.BUSCAR)
            self.state = 78
            self.match(LenguajeNoRelacionalParser.IDENTIFICADOR)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 79
                self.condicionDonde()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActualizarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ACTUALIZAR(self):
            return self.getToken(LenguajeNoRelacionalParser.ACTUALIZAR, 0)

        def IDENTIFICADOR(self):
            return self.getToken(LenguajeNoRelacionalParser.IDENTIFICADOR, 0)

        def FIJAR(self):
            return self.getToken(LenguajeNoRelacionalParser.FIJAR, 0)

        def listaAsignaciones(self):
            return self.getTypedRuleContext(LenguajeNoRelacionalParser.ListaAsignacionesContext,0)


        def condicionDonde(self):
            return self.getTypedRuleContext(LenguajeNoRelacionalParser.CondicionDondeContext,0)


        def getRuleIndex(self):
            return LenguajeNoRelacionalParser.RULE_actualizar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActualizar" ):
                listener.enterActualizar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActualizar" ):
                listener.exitActualizar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActualizar" ):
                return visitor.visitActualizar(self)
            else:
                return visitor.visitChildren(self)




    def actualizar(self):

        localctx = LenguajeNoRelacionalParser.ActualizarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_actualizar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(LenguajeNoRelacionalParser.ACTUALIZAR)
            self.state = 83
            self.match(LenguajeNoRelacionalParser.IDENTIFICADOR)
            self.state = 84
            self.match(LenguajeNoRelacionalParser.FIJAR)
            self.state = 85
            self.listaAsignaciones()
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 86
                self.condicionDonde()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EliminarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELIMINAR(self):
            return self.getToken(LenguajeNoRelacionalParser.ELIMINAR, 0)

        def DE(self):
            return self.getToken(LenguajeNoRelacionalParser.DE, 0)

        def IDENTIFICADOR(self):
            return self.getToken(LenguajeNoRelacionalParser.IDENTIFICADOR, 0)

        def condicionDonde(self):
            return self.getTypedRuleContext(LenguajeNoRelacionalParser.CondicionDondeContext,0)


        def getRuleIndex(self):
            return LenguajeNoRelacionalParser.RULE_eliminar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEliminar" ):
                listener.enterEliminar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEliminar" ):
                listener.exitEliminar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEliminar" ):
                return visitor.visitEliminar(self)
            else:
                return visitor.visitChildren(self)




    def eliminar(self):

        localctx = LenguajeNoRelacionalParser.EliminarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_eliminar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(LenguajeNoRelacionalParser.ELIMINAR)
            self.state = 90
            self.match(LenguajeNoRelacionalParser.DE)
            self.state = 91
            self.match(LenguajeNoRelacionalParser.IDENTIFICADOR)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 92
                self.condicionDonde()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionDondeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DONDE(self):
            return self.getToken(LenguajeNoRelacionalParser.DONDE, 0)

        def expresion(self):
            return self.getTypedRuleContext(LenguajeNoRelacionalParser.ExpresionContext,0)


        def getRuleIndex(self):
            return LenguajeNoRelacionalParser.RULE_condicionDonde

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicionDonde" ):
                listener.enterCondicionDonde(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicionDonde" ):
                listener.exitCondicionDonde(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicionDonde" ):
                return visitor.visitCondicionDonde(self)
            else:
                return visitor.visitChildren(self)




    def condicionDonde(self):

        localctx = LenguajeNoRelacionalParser.CondicionDondeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_condicionDonde)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(LenguajeNoRelacionalParser.DONDE)
            self.state = 96
            self.expresion()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaAsignacionesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LenguajeNoRelacionalParser.AsignacionContext)
            else:
                return self.getTypedRuleContext(LenguajeNoRelacionalParser.AsignacionContext,i)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(LenguajeNoRelacionalParser.COMA)
            else:
                return self.getToken(LenguajeNoRelacionalParser.COMA, i)

        def getRuleIndex(self):
            return LenguajeNoRelacionalParser.RULE_listaAsignaciones

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaAsignaciones" ):
                listener.enterListaAsignaciones(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaAsignaciones" ):
                listener.exitListaAsignaciones(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListaAsignaciones" ):
                return visitor.visitListaAsignaciones(self)
            else:
                return visitor.visitChildren(self)




    def listaAsignaciones(self):

        localctx = LenguajeNoRelacionalParser.ListaAsignacionesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_listaAsignaciones)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.asignacion()
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 99
                self.match(LenguajeNoRelacionalParser.COMA)
                self.state = 100
                self.asignacion()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(LenguajeNoRelacionalParser.IDENTIFICADOR, 0)

        def IGUAL(self):
            return self.getToken(LenguajeNoRelacionalParser.IGUAL, 0)

        def expresion(self):
            return self.getTypedRuleContext(LenguajeNoRelacionalParser.ExpresionContext,0)


        def getRuleIndex(self):
            return LenguajeNoRelacionalParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = LenguajeNoRelacionalParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(LenguajeNoRelacionalParser.IDENTIFICADOR)
            self.state = 107
            self.match(LenguajeNoRelacionalParser.IGUAL)
            self.state = 108
            self.expresion()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObjetoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LLAVE_ABRE(self):
            return self.getToken(LenguajeNoRelacionalParser.LLAVE_ABRE, 0)

        def LLAVE_CIERRA(self):
            return self.getToken(LenguajeNoRelacionalParser.LLAVE_CIERRA, 0)

        def par(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LenguajeNoRelacionalParser.ParContext)
            else:
                return self.getTypedRuleContext(LenguajeNoRelacionalParser.ParContext,i)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(LenguajeNoRelacionalParser.COMA)
            else:
                return self.getToken(LenguajeNoRelacionalParser.COMA, i)

        def getRuleIndex(self):
            return LenguajeNoRelacionalParser.RULE_objeto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObjeto" ):
                listener.enterObjeto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObjeto" ):
                listener.exitObjeto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObjeto" ):
                return visitor.visitObjeto(self)
            else:
                return visitor.visitChildren(self)




    def objeto(self):

        localctx = LenguajeNoRelacionalParser.ObjetoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_objeto)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(LenguajeNoRelacionalParser.LLAVE_ABRE)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==31:
                self.state = 111
                self.par()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==25:
                    self.state = 112
                    self.match(LenguajeNoRelacionalParser.COMA)
                    self.state = 113
                    self.par()
                    self.state = 118
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 121
            self.match(LenguajeNoRelacionalParser.LLAVE_CIERRA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(LenguajeNoRelacionalParser.IDENTIFICADOR, 0)

        def DOS_PUNTOS(self):
            return self.getToken(LenguajeNoRelacionalParser.DOS_PUNTOS, 0)

        def expresion(self):
            return self.getTypedRuleContext(LenguajeNoRelacionalParser.ExpresionContext,0)


        def getRuleIndex(self):
            return LenguajeNoRelacionalParser.RULE_par

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPar" ):
                listener.enterPar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPar" ):
                listener.exitPar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPar" ):
                return visitor.visitPar(self)
            else:
                return visitor.visitChildren(self)




    def par(self):

        localctx = LenguajeNoRelacionalParser.ParContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_par)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(LenguajeNoRelacionalParser.IDENTIFICADOR)
            self.state = 124
            self.match(LenguajeNoRelacionalParser.DOS_PUNTOS)
            self.state = 125
            self.expresion()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresionO(self):
            return self.getTypedRuleContext(LenguajeNoRelacionalParser.ExpresionOContext,0)


        def getRuleIndex(self):
            return LenguajeNoRelacionalParser.RULE_expresion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresion" ):
                listener.enterExpresion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresion" ):
                listener.exitExpresion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpresion" ):
                return visitor.visitExpresion(self)
            else:
                return visitor.visitChildren(self)




    def expresion(self):

        localctx = LenguajeNoRelacionalParser.ExpresionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expresion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.expresionO()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionOContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresionY(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LenguajeNoRelacionalParser.ExpresionYContext)
            else:
                return self.getTypedRuleContext(LenguajeNoRelacionalParser.ExpresionYContext,i)


        def O(self, i:int=None):
            if i is None:
                return self.getTokens(LenguajeNoRelacionalParser.O)
            else:
                return self.getToken(LenguajeNoRelacionalParser.O, i)
